# skill-jmap-client

./: .env.example  .gitignore  CLAUDE.md  README.md  jmap_archive_folder.py  jmap_common.py  jmap_create_folder.py  jmap_file_email.py  jmap_get_email.py  jmap_list_emails.py  jmap_list_folders.py  mise.toml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/skills/: jmap-email.md
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_jmap_archive_folder.py  test_jmap_common.py  test_jmap_create_folder.py  test_jmap_file_email.py  test_jmap_get_email.py  test_jmap_list_emails.py  test_jmap_list_folders.py
